Revert to old duration editor; Ensure blurring

--- a/src/renderer/containers/Table/DefaultCells/DefaultCell/styles.pcss
+++ b/src/renderer/containers/Table/DefaultCells/DefaultCell/styles.pcss
@@ -37,7 +37,15 @@
     display: flex !important;
 }
 
-.duration-input > input {
+.duration-input > span > span > input {
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
+.duration-input > span > span > span {
+    border-radius: unset;
+    font-size: smaller;
+    margin: 0;
     padding-left: 2px;
     padding-right: 2px;
 }
